fix: fix wrong size calculation of p5 canvas elements after having changed the main-content-container padding and fix color problems with selected tags and change color of h3 to  to improve overall look

--- a/src/app/core/home/home-page/home-page.component.scss
+++ b/src/app/core/home/home-page/home-page.component.scss
@@ -116,14 +116,18 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 0 20px 0;
-  gap: 5px;
+  row-gap: 5px;
+  column-gap: 10px;
 }
 
 .tag-selected {
-  background-color: $brand;
+  // background-color: $brand;
+  outline: 1px solid $brand;
+  color: $brand;
+  border-radius: 5px;
   &:hover {
-    background-color: $mid-gray;
-    color: $white
+    color: $mid-gray;
+    outline: 1px solid $mid-gray;
   }
 }
 
