--- a/src/assets/stylesheets/typography.scss
+++ b/src/assets/stylesheets/typography.scss
@@ -106,7 +106,7 @@ h3 {
   margin: 0 0 30px 0;
   font-weight: 300;
   // color: $accent;
-  color: $accent-dark;
+  color: $white;
   @media (min-width: $md) {
     font-size: 1.8rem;
   }
@@ -261,6 +261,11 @@ button {
     }
 
   }
+
+  h3 {
+    color: $accent-dark;
+  }
+  
   h4 {
     color: $accent-dark;
   }
